migrate ejb-core/silverstatistics Replace Spring factory and clean code